--- a/index.html
+++ b/index.html
@@ -1,5 +1,24 @@
 <html>
-  <body>
-    <p>Hello World!</p>
-  </body>
-</html>
+ <body>
+ <script>
+ var print = function(text) {
+ document.write(text);
+ }
+ confirm("Are you ready to play?");
+ confirm("Are you sure?");
+ var myAge = prompt("Whats your age scallywag?");
+ if (myAge < 15) {
+ confirm("You're a bit young, do you still wanna play and be a rebel?");
+ } else {
+ alert("Go straight on");
+ }
+ alert("You have recently been in a plane crash. You are the sole survivor of the plane and yhe food on board will only last 5 days.");
+ var planeCrash = prompt("Do you want to leave the plane? Yes or no.");
+ if (planeCrash.length = 3) {
+ alert("Each day passes by slowly. The food storage is disappearing with no sign of hope. Onw nkght you fall asleep but never wake up. Better luck next time!") ;
+ } else {
+ alert("You pack some essentials and head off. Fortunately, you find a river and follow it. The river leads to a small village. Cobgratulations, you survived!");
+ }
+ </script>
+ </body>
+ </html>
